# multi-agent-urban-traffic-signal-optimization-in-simulated-environments

./: .gitignore  README.md
driver_app/: pubspec.yaml
driver_app/lib/: main.dart
emergency_vehicle_preemption/: requirements.txt
emergency_vehicle_preemption/runtime/: green_wave_controller.py
gnn_optimizer/: requirements.txt
gnn_optimizer/src/: config.py
mpc_traffic_control/: analyze_results.py  generate_detectors.py  generate_scenario.py  pyproject.toml  trips.trips.xml  verify_control.py
mpc_traffic_control/conf/: config.yaml
mpc_traffic_control/conf/mpc/: conservative.yaml
mpc_traffic_control/conf/network/: e2_output.xml  grid_3x3.net.xml  grid_3x3.rou.xml  grid_3x3.sumocfg
mpc_traffic_control/conf/platform/: local_sumo.yaml
mpc_traffic_control/outputs/2025-11-29/14-13-28/.hydra/: hydra.yaml
mpc_traffic_control/outputs/2025-12-21/12-59-03/.hydra/: config.yaml  hydra.yaml
mpc_traffic_control/outputs/2025-12-21/13-18-52/.hydra/: config.yaml  hydra.yaml
mpc_traffic_control/outputs/2025-12-21/13-20-31/.hydra/: config.yaml  hydra.yaml
mpc_traffic_control/src/traffic_mpc/: main.py
mpc_traffic_control/src/traffic_mpc/config/: settings.py
mpc_traffic_control/src/traffic_mpc/core/: controller.py  estimation.py
mpc_traffic_control/src/traffic_mpc/domain/: network.py  signals.py
mpc_traffic_control/src/traffic_mpc/interface/: sumo_client.py
mpc_traffic_control/src/traffic_mpc/utils/: logging.py  telemetry.py
mpc_traffic_control/tests/unit/: test_config.py  test_controller.py
simulation_and_control_panel/: .env.example  README.md
(+73 files in other folders)
