[project]
name = "traffic-mpc"
version = "0.1.0"
description = "MPC Traffic Signal Control"
authors = [
    {name = "rasindu"}
]
readme = "README.md"
requires-python = ">=3.11, !=3.14.1"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "casadi (>=3.7.2,<4.0.0)",
    "traci (>=1.25.0,<2.0.0)",
    "libsumo (>=1.25.0,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "networkx (>=3.6.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]
